--- a/templates/default/grub.erb
+++ b/templates/default/grub.erb
@@ -6,13 +6,13 @@
 # For full documentation of the options in this file, see:
 #   info -f grub -n 'Simple configuration'
 
-GRUB_DEFAULT=<%= node['sol']['grub']['default'] %>
-GRUB_HIDDEN_TIMEOUT=<%= node['sol']['grub']['hidden_timeout'] %>
-GRUB_HIDDEN_TIMEOUT_QUIET=<%= node['sol']['grub']['hidden_timeout_quiet'] %>
-GRUB_TIMEOUT=<%= node['sol']['grub']['timeout'] %>
+GRUB_DEFAULT=<%= @grub_default %>
+GRUB_HIDDEN_TIMEOUT=<%= @grub_hidden_timeout %>
+GRUB_HIDDEN_TIMEOUT_QUIET=<%= @grub_hidden_timeout_quiet %>
+GRUB_TIMEOUT=<%= @grub_timeout %>
 GRUB_DISTRIBUTOR=`lsb_release -i -s 2> /dev/null || echo Debian`
-GRUB_CMDLINE_LINUX_DEFAULT=<%= node['sol']['grub']['cmdline_linux_default'] %>
-GRUB_CMDLINE_LINUX="text console=tty0 console=<%= node['sol']['tty']['name'] %>,<%= node['sol']['serial']['bios_speed'] %>n8"
+GRUB_CMDLINE_LINUX_DEFAULT=<%= @grub_cmdline_linux_default %>
+GRUB_CMDLINE_LINUX="text console=tty0 console=<%= @tty_name %>,<%= @serial_bios_speed %>n8"
 
 # Uncomment to enable BadRAM filtering, modify to suit your needs
 # This works with Linux (no patch required) and with any kernel that obtains
@@ -36,4 +36,4 @@ GRUB_TERMINAL="console serial"
 # Uncomment to get a beep at grub start
 #GRUB_INIT_TUNE="480 440 1"
 
-GRUB_SERIAL_COMMAND="serial --speed=<%= node['sol']['serial']['speed'] %> --unit=<%= node['sol']['serial']['unit'] %> --word=<%= node['sol']['serial']['word'] %> --parity=<%= node['sol']['serial']['parity'] %> --stop=<%= node['sol']['serial']['stop'] %>"
+GRUB_SERIAL_COMMAND="serial --speed=<%= @serial_speed %> --unit=<%= @serial_unit %> --word=<%= @serial_word %> --parity=<%= @serial_parity %> --stop=<%= @serial_stop %>"
